--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h1>Mind & Body</h1>
             </div>
             <div class="links">
-                <a href="#">Our Story</a>
-                <a href="#">Practice</a>
-                <a href="#">Classes</a>
+                <a href="#">Pricing</a>
+                <a href="#">Book Now</a>
+                <a href="#">Contact</a>
             </div>
 
             <!-- Each line element received a class name of "line" -->
@@ -38,8 +38,8 @@
             <h3>Get unlimited access to yoga, pilates, and meditation classes that fit the way you feel.</h3>
             
             <div class="ctas">
-                <button class="cta-secondary">Explore classes</button>
-                <button class="cta-main">Sign Up Today</button>
+                <button class="cta-secondary">Satisfied Clients</button>
+                <button class="cta-main"><a href="https://koalendar.com/e/miss_chris_stylez-llc">Book Now!</a></button>
             </div>
         </div>
     </section>
