--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <section class="front-page">
-        <img  class="hero" src="./photos/pexels-antony-trivet-12868533.jpg" alt="">
+        <img  class="hero" src="./photos/pexels-antony-trivet-12868533.jpg" alt="makeup picture face">
         <!-- <video muted loop class="hero" src="./videos/IMG_4191.MOV"></video> -->
         <!-- <img class="hero" src="./assets/hero.png"> -->
         <nav>
@@ -22,8 +22,8 @@
                 <h1>Miss_Chris_Stylez</h1>
             </div>
             <div class="links">
-                <a href="#">Pricing</a>
-                <a href="#">Book Now</a>
+                <a href="#price">Pricing</a>
+                <a href="https://koalendar.com/e/miss_chris_stylez-llc">Book Now</a>
                 <a href="#">Contact</a>
             </div>
 
@@ -52,6 +52,15 @@
         </div>
     </section>
 
+    <section class="aboutMe">
+        <!--Section 2: About me-->
+                <div class="column-2">
+                    <h2>About me</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos odit nemo facilis."<a href="https://www.digitalocean.com/community/tutorial_series/how-to-build-a-website-with-css">How To Build a Website With CSS</a>," Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, expedita?<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, ea?</p>
+                </div>
+                <div class="column-2 large-profile"></div>
+    </section>
+
     <section class="classes" id="clients">
         <div class="classes-desc">
             <h2>Our Services Tailored For You</h2>
@@ -65,20 +74,21 @@
                 </div>
 
                 <div class="yoga">
-                    <h3>Yoga</h3>
+                    <h3>Braiding</h3>
                     <video muted loop class="video" src="./videos/IMG_4186.MOV"></video>
                 </div>
                 <div class="meditation">
-                    <h3>Meditation</h3>
+                    <h3>Custom Design</h3>
                     <video muted loop class="video" src="./videos/IMG_4190.MOV"></video>
                 </div>
             </div>
     </section>
 
     <section class="about">
-        <div class="our-story">
-            <h2>Pricing</h2>
+        <div class="our-story" id="price">
+            <h2>Services</h2>
             <div class="table_container">
+                <h1 class="T_heading"></h1>
                 <table class="table">
                     <thead>
                         <tr>
@@ -91,38 +101,40 @@
                     <tbody>
                         <tr>
                             <td data-label="STYLE">Cut</td>
-                            <td data-label="PRICE">$165</td>                        
+                            <td data-label="PRICE">Varies</td>                        
                             <td data-label="BOOK NOW"><a href="#" class="btn">Book!</a></td>                        
                         </tr>
                         <tr>
                             <td data-label="STYLE">Styling</td>
-                            <td data-label="PRICE">$165</td>
+                            <td data-label="PRICE">Varies</td>
                             <td data-label="BOOK NOW"><a href="#" class="btn">Book!</a></td> 
                         </tr>
                         <tr>
                             <td data-label="STYLE">Color</td>
-                            <td data-label="PRICE">$165</td>
+                            <td data-label="PRICE">Varies</td>
                             <td data-label="BOOK NOW"><a href="#" class="btn">Book!</a></td> 
                         </tr>
                         <tr>
                             <td data-label="STYLE">MicroFibers</td>
-                            <td data-label="PRICE">$165</td>
+                            <td data-label="PRICE">Varies</td>
                             <td data-label="BOOK NOW"><a href="#" class="btn">Book!</a></td> 
                         </tr>
                     </tbody>
                 </table>
+                <br>
+
+                <h3>If you have a preferred style you want. Please provide photos of the respective hair design.<br> 
+                <br>Once received, a representative will contact you with custom pricing. <br>
+                <br>All custom designs are welcomed!</h3>
             </div>
 
-            <br>
-            <p>If you have a preferred style you want. Please provide photos of the respective hair design.<br> <br>Once received, a representative will contact you with custom pricing. <br>
-            <br>All custom designs are welcomed!</p>
         </div>
         <img src="./photos/photo_2022-12-20_02-15-33.jpg" alt="our-story">
     </section>
-
+    
     <footer>
         <div class="footer_content">
-            <h3>MissChrisStylez</h3>
+            <h3>MissChrisStylez LLC.</h3>
             <p>We aim to please. Thank You for your interest. Please book us today for the BEST deals!</p>
             <ul class="socials">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
